src/test/deca/context/invalid/declClass-wrongSignatureOrder.context
declClass-wrongFieldTypeIntBoolean.deca:9: